# KV-Cache-Inception

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Claude-Chat-1.md  Claude-Chat-2.md  EXPERIMENTS.md  LICENSE  README.md  SMOKE_RUN.md  mcts_output_1776800541.json  pyproject.toml  test_family_classifier.py  test_reward.py
docs/: 04-18-2026 KV Cache Inception Meeting.srt  CLAUDE_CONTEXT_BRIEF.md  contribution-1-telemetry-matrix.md  contribution-2-reversible-mcts.md  contribution-3-orthogonal-escape.md  max-briefing-2026-04-21.md  max-critique-of-experiment-pivot-2026-04-24.md
lat_probes/: evidence_manipulation_tinyllama-1b.pkl  information_extraction_tinyllama-1b.pkl  portfolioiq_tinyllama-1b.pkl  safety_bypass_tinyllama-1b.pkl  safety_jailbreak_tinyllama-1b.pkl
logomesh/: __init__.py  ablation.py  croissant_export.py  evidence_store.py  graders.py  hneuron_monitor.py  kv_mcts.py  library_loader.py  local_model.py  oracle.py  orthogonal_escape.py  payload_library.py  search_policy.py  telemetry_matrix.py  threat_model.py  whitebox.py
payload_libraries/: evidence_manipulation_tinyllama.json  evidence_manipulation_tinyllama.policy.json  information_extraction_tinyllama.json  information_extraction_tinyllama.policy.json  portfolioiq_tinyllama.json  portfolioiq_tinyllama.policy.json  safety_bypass_tinyllama-1b.json  safety_bypass_tinyllama-1b.policy.json  safety_bypass_tinyllama.json  safety_bypass_tinyllama.policy.json  safety_bypass_tinyllama_v2.json  safety_bypass_tinyllama_v2.policy.json  safety_jailbreak_tinyllama.json  safety_jailbreak_tinyllama.policy.json
scripts/: _track_a_results_meta-llama_Llama-3.2-1B-Instruct.json  _track_d_vram_3b.json  _track_g_mcts_results_meta-llama_Llama-3.2-1B-Instruct.json  _track_g_mcts_results_meta-llama_Llama-3.2-3B-Instruct.json  _track_g_results_meta-llama_Llama-3.2-1B-Instruct.json  audit_track_g_report.py  build_croissant_package.py  collect_dataset.py  diagnose_track_a_entropy.py  diagnose_track_c_benchmarks.py  diagnose_track_f_negcontrol.py  diagnose_track_g_cartography.py  export_kv_mcts_to_croissant.py  figure_exp2_mean_step_alpha.py  measure_kv_mcts_vram.py  run_kv_mcts.py  (+5 more)
(+355 files in other folders)
