[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logomesh"
version = "0.1.0"
description = "KV-Cache Inception — Reversible MCTS for Alignment Faking Detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.30.0",
    "huggingface-hub>=1.7.2",
    "jinja2>=3.1.0",
    "openai>=2.8.1",
    "pydantic>=2.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["logomesh"]
